# ml_models

./: .gitignore  pyproject.toml
components/lightgbm/evaluate/: component.yaml  pyproject.toml
components/lightgbm/evaluate/src/: main.ipynb  main.py
components/lightgbm/train/: pyproject.toml
components/lightgbm/train/src/: main.ipynb
