[tool.poetry]
name = "LightGBM_evaluate"
version = "0.1.0"
description = ""
authors = ["rayuron <rayuron@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
lightgbm = "^3.3.2"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"
ipykernel = "^6.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
